# dblp2bibtex

./: .gitignore  LICENSE  README.md  README.org  Setup.lhs  author-list.txt  dblp2bibtex.cabal  stack.yaml
Text/Bibtex/: DBLPToBibtex.hs  ListPapers.hs  Main.hs  SearchDBLPURIs.hs
app/: Main.hs
src/: BibtexProcessing.hs  DBLPToBibtex.hs
