Name:          dblp2bibtex
Homepage:      https://github.com/robstewart57/dblp2bibtex
Version:       0.0.1
Synopsis:      A DBLP URI to Bibtex file generation utility
Category:      Data
Description:
    This `dblp2bibtex` tool provides 3 features, primarily generating bibtex files
    for authors identified in the DBLP database. Authors are disambiguated with
    Unique Resource Identifiers, which are used extensively in this utility.
License:       GPL-3
License-file:  LICENSE
Author:        Rob Stewart
Maintainer:    robstewart57@gmail.com
Stability:     Experimental
Build-type:    Simple
Homepage:      https://github.com/robstewart57/dblp2bibtex
Bug-Reports:   https://github.com/robstewart57/dblp2bibtex/issues
Tested-With:   GHC==7.4.1
Cabal-Version: >=1.6

Executable dblp2bibtex
  Extensions:    RecordWildCards
                 DeriveDataTypeable 
                 DoAndIfThenElse
                 ScopedTypeVariables
                 OverloadedStrings

  Build-Depends: cmdargs >= 0.9.5
  ghc-options:   -Wall -fno-warn-unused-do-bind
  Main-is:	 Text/Bibtex/Main.hs

Library
  Build-Depends: base >= 4,
                 base <  5,
                 HTTP >= 4,
                 bibtex >= 0.1,
                 HaXml >= 1.23.3,
                 text >= 0.11.2.0,
                 hsparql >= 0.1.3,
                 json >= 0.5,
                 aeson >= 0.6.0.2,
                 bytestring,
                 rdf4h >= 0.9,
                 split >= 0.1.4.3
  ghc-options:   -Wall -fno-warn-unused-do-bind
  Extensions: RecordWildCards
              OverloadedStrings
              ScopedTypeVariables
  Exposed-Modules: Text.Bibtex.DBLPToBibtex
                   Text.Bibtex.SearchDBLPURIs
                   Text.Bibtex.ListPapers


source-repository head
  type:     git
  location: git://github.com/robstewart57/dblp2bibtex.git
